# low_precision_fortran

./: .ccls  .clang-format  .clangd  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE  CONTRIBUTING.md  CONTRIBUTORS.md  LPFConfig.cmake.in  README.md  lpf-blas.pc.in  lpf.pc.in
cmake/: README.md  (+3 more)
examples/: CMakeLists.txt  README.md  bf16_demo1.f90  bf16_demo_fraction.f90  bf16_demo_stats.f90  blas_cg.f90  demo1.f03  demo_fraction.f90  fp16_demo1.f90  fp16_demo_fraction.f90  fp16_demo_stats.f90  fp8_blas.f90
examples/benchmark/: CMakeLists.txt  CMakeListst.txt  benchmark.cpp  linspace.f90
examples/cmake-example/: CMakeLists.txt
examples/qr/: CMakeLists.txt  aux_print_matrix.f90  bench_hnrm2.cpp  nanobench.cpp  qr.f90  qr_calls.f90  qr_stats.f90
examples/tlapack/: CMakeLists.txt  example_lu.cpp  lu_call.f90  lu_interface.cpp
src/: CMakeLists.txt  bf16.f90  bf16_helper.c  bf16_helper.h  bf16_math_generic.c  bf16_math_generic.f90  bf16_math_one_arg.f90  bf16_math_trig.c  bf16_math_trig.f90  bf16_math_two_args.f90  bf16_maxval.f90  bf16_minloc.f90  constants.h  fp16.f03  fp16.f08  fp16.f90  fp16_helper.c  fp16_helper.h  fp16_math_generic.c  fp16_math_generic.f08  fp16_math_generic.f90  fp16_math_one_arg.c  fp16_math_one_arg.f08  fp16_math_trig.c  fp16_math_trig.f90  fp16_math_two_args.c  fp16_math_two_args.f08  fp16_maxloc.f08  fp16_maxloc.f90  fp16_maxval.f08  fp16_minloc.f08  fp16_minval.f08  fp16_minval.f90  fp16_to_bf16_blas.sed  fp32.h  init.c  lpf_internal.h  math_functions.lst  math_functions_noglibc.lst  math_functions_special.lst  (+2 more)
src/aux/: get_wtime.c  xerbla.c  xerbla.f90
src/bf16/: bf16.F90  bf16.f90  bf16_dotproduct.f90  bf16_helper.c  bf16_helper.h  bf16_math_generic.c  bf16_math_generic.f90  bf16_math_one_arg.c  bf16_math_one_arg.f90  bf16_math_trig.f90  bf16_math_two_args.c  bf16_math_two_args.f90  bf16_matmul.f90  bf16_maxloc.f90  bf16_maxval.f90  bf16_minloc.f90  bf16_minval.f90  bf16_norm2.f90  bf16_product.f90  bf16_sum.f90
src/blas/: CMakeLists.txt
src/blas/bf16/: lpf_blas_bf16.F90  lpf_lapack_bf16.F90
src/blas/fp16/: lpf_blas_fp16.F90  lpf_lapack_fp16.F90
src/blas/generic/: lpf_blas_generic.F90  lpf_lapack_generic.F90
src/blas/highprecision/: scale_diag_right.f90  scale_diag_twoside.f90
src/cxx/: lpf_bf16.hpp  lpf_bf16_tlapack.hpp  lpf_fp16.hpp  lpf_fp16_tlapack.hpp  lpf_fp8_e4m3.hpp  lpf_fp8_e4m3_tlapack.hpp  lpf_fp8_e5m2.hpp  lpf_fp8_e5m2_tlapack.hpp
src/fp16/: fp16.F90  fp16.f90  fp16_dotproduct.f90  fp16_helper.c  fp16_helper.h  fp16_math_generic.c  fp16_math_generic.f90  fp16_math_one_arg.c  fp16_math_one_arg.f90  fp16_math_trig.f90  fp16_math_two_args.c  fp16_math_two_args.f90  fp16_matmul.f90  fp16_maxloc.f90  fp16_maxval.f90  fp16_minloc.f90  fp16_minval.f90  fp16_norm2.f90  fp16_product.f90  fp16_sum.f90
src/fp8_e4m3/: fp8_e4m3.F90  fp8_e4m3_dotproduct.f90  fp8_e4m3_generic.c  fp8_e4m3_helper.c  fp8_e4m3_helper.h  fp8_e4m3_math_generic.f90  fp8_e4m3_math_one_arg.c  fp8_e4m3_math_one_arg.f90  fp8_e4m3_math_trig.c  fp8_e4m3_math_trig.f90  fp8_e4m3_math_two_args.c  fp8_e4m3_math_two_args.f90  fp8_e4m3_matmul.f90  fp8_e4m3_maxloc.f90  fp8_e4m3_maxval.f90  fp8_e4m3_minloc.f90  fp8_e4m3_minval.f90  fp8_e4m3_norm2.f90  fp8_e4m3_product.f90  fp8_e4m3_sum.f90
src/fp8_e4m3/emu/: base_arithmetic.c  classify.c  conversion.c  debug.c  fp8_e4m3.h  fp8_e4m3_abs.c  fp8_e4m3_bits.h  fp8_e4m3_lut.h  fp8_e4m3_math_lut.c  gen_lookup_tables.c  lpf_fp8_e4m3_emu.h  tests.c
src/fp8_e5m2/: fp8_e5m2.F90  fp8_e5m2_dotproduct.f90  fp8_e5m2_generic.c  fp8_e5m2_helper.c  fp8_e5m2_helper.h  fp8_e5m2_math_generic.f90  fp8_e5m2_math_one_arg.c  fp8_e5m2_math_one_arg.f90  fp8_e5m2_math_trig.c  fp8_e5m2_math_trig.f90  fp8_e5m2_math_two_args.c  fp8_e5m2_math_two_args.f90  fp8_e5m2_matmul.f90  fp8_e5m2_maxloc.f90  fp8_e5m2_maxval.f90  fp8_e5m2_minloc.f90  fp8_e5m2_minval.f90  fp8_e5m2_norm2.f90  fp8_e5m2_product.f90  fp8_e5m2_sum.f90
src/fp8_e5m2/emu/: abs.c  base_arithmetic.c  classify.c  conversion.c  debug.c  fp8_e5m2.h  fp8_e5m2_bits.h  fp8_e5m2_lut.h  fp8_e5m2_math_lut.c  gen_lookup_tables.c  lpf_fp8_e5m2_emu.h  tests.c
src/sysinfo/: aarch64.c  x86_64.c
src/templates/: function_one_arg.tmpl.c  function_two_arg.tmpl.c  generate_math_functions_one_args.sh  generate_math_functions_two_args.sh  header.tmpl.c  math_functions_two_args.lst
test/: CMakeLists.txt
test/blas/bf16/: CMakeLists.txt  bblat2.f90  bblat2.in  bblat3.f90  bblat3.in
test/blas/fp16/: CMakeLists.txt  hblat2.f90  hblat2.in  hblat3.f90  hblat3.in
test/blas/fp8_e4m3/: CMakeLists.txt
test/blas/fp8_e5m2/: CMakeLists.txt
test/blas/generic_src/: generic_test_utils.F90  test_lapack_cholesky.F90  test_level1_asum.F90  test_level1_axpby.F90  test_level1_axpy.F90  test_level1_copy.F90  test_level1_dot.F90  test_level1_iamax.F90  test_level1_nrm2.F90  test_level1_nrm2_fp32.F90  test_level1_rot.F90  test_level1_rotg.F90  test_level1_rotm.F90  test_level1_rotmg.F90  test_level1_scal.F90  test_level1_swap.F90  test_level2_gbmv.F90  test_level2_gemv.F90  test_level2_ger.F90  test_level2_sbmv.F90  test_level2_spmv.F90  test_level2_spr.F90  test_level2_spr2.F90  test_level2_symv.F90  test_level2_tbmv.F90  test_level2_tbsv.F90  test_level2_tpmv.F90  test_level2_tpsv.F90  test_level2_trmv.F90  test_level2_trsv.F90  test_level3_gemm.F90  test_level3_gemm_fp32.F90  test_level3_gemmtr.F90  test_level3_symm.F90  test_level3_syr2k.F90  test_level3_syrk.F90  test_level3_trmm.F90  test_level3_trsm.F90
test/gfortran-test/read-io/: test_io.f90  test_io.in
test/gfortran-test/write-i8/: test_write_i8.f90
test/unit/: CMakeLists.txt
test/unit/bf16/: CMakeLists.txt  lpf_bf16_test_utils.f90  test_bf16_arithmetic.f90  test_bf16_assignment.f90  test_bf16_comparison.f90  test_bf16_constructors.f90  test_bf16_dot_product.f90  test_bf16_intrinsics.f90  test_bf16_io.f90  test_bf16_math_one_arg.f90  test_bf16_math_two_arg.f90  test_bf16_matmul.f90  test_bf16_minmax.f90  test_bf16_product.f90  test_bf16_reductions.f90  test_bf16_simple.f90  test_bf16_sum.f90  test_bf16_trig_deg.f90
(+309 files in other folders)
