IF (LPF_HAVE_FP16 AND LPF_BLAS)
    ADD_SUBDIRECTORY(blas/fp16)
ENDIF()

IF (LPF_HAVE_BF16 AND LPF_BLAS)
    ADD_SUBDIRECTORY(blas/bf16)
ENDIF()

IF (LPF_HAVE_BF16)
    ADD_SUBDIRECTORY(unit/bf16)
ENDIF()

IF (LPF_HAVE_FP16)
    ADD_SUBDIRECTORY(unit/fp16)
ENDIF()

IF (LPF_FP8_E4M3)
    ADD_SUBDIRECTORY(unit/fp8_e4m3)
ENDIF()

IF (LPF_FP8_E5M2)
    ADD_SUBDIRECTORY(unit/fp8_e5m2)
ENDIF()
